fix: enhance spacing and layout for article and navigation elements

--- a/style.css
+++ b/style.css
@@ -19,6 +19,18 @@ body {
   margin-bottom: 60px;
 }
 
+nav {
+  font-size: 18px;
+}
+
+article {
+  margin-bottom: 60px;
+}
+
+.post-header {
+  margin-bottom: 40px;
+}
+
 aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
@@ -47,6 +59,8 @@ h2 {
 
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -58,6 +72,13 @@ h4 {
 p {
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 15px;
 }
 
 li {
@@ -161,7 +182,3 @@ footer p {
 nav p{
    font-size: 18px;
    }*/
-
-nav {
-  font-size: 18px;
-}
